# agentlake

./: .env.example  .gitignore  AGENTS.md  API_REFERENCE.md  ARCHITECTURE.md  CLAUDE.md  ENTITY_GRAPH.md  LICENSE  MCP_CONNECTION_GUIDE.md  MCP_SERVER.md  Makefile  PRD.md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 97b1f90cc9d3_initial_schema.py
backend/migrations/: add_folders.sql
backend/src/agentlake/: __init__.py  config.py  main.py
backend/src/agentlake/adapters/: __init__.py  base.py  code.py  csv_adapter.py  docx.py  html.py  image.py  json_adapter.py  markdown.py  pdf.py  pptx.py  registry.py  text.py  xlsx.py
backend/src/agentlake/api/: __init__.py  admin.py  discover.py  graph.py  health.py  query.py  streaming.py  vault.py
backend/src/agentlake/core/: auth.py  database.py  exceptions.py  middleware.py  pagination.py
backend/src/agentlake/llm_gateway/: app.py  auth.py  proxy.py  rate_limiter.py  token_ledger.py
backend/src/agentlake/mcp/: __main__.py  client.py  prompts.py  resources.py  server.py  tools.py
backend/src/agentlake/models/: __init__.py  api_key.py  base.py  diff_log.py  document.py  file.py  folder.py  knowledge.py  llm_request.py  tag.py
backend/src/agentlake/pipeline/: __init__.py  agentic_search.py  cross_document_graph.py  cross_document_nodes.py  cross_document_state.py  folder_analysis.py  graph.py  nodes.py  state.py
backend/src/agentlake/prompts/: __init__.py  classify_ontology.py  extract_entities.py  extract_relationships.py  full_document_analysis.py  summarize_chunk.py  summarize_document.py
backend/tests/: conftest.py
backend/tests/factories/: document_factory.py  file_factory.py
backend/tests/fixtures/: sample.csv  sample.json  sample.md  sample.txt
backend/tests/integration/: test_edit_workflow.py  test_incremental_reprocess.py  test_search.py  test_upload_pipeline.py
(+140 files in other folders)
